# audio-filtering-pipeline

./: .gitignore  Makefile  README.md  emilia-study.md  hyper_params.json  image.md  main.py  pyproject.toml  run_deduplicator.py  start.sh  thresholds.json
.ray_tmp/: session_latest
dashboard/: app.py
dashboard/templates/: index.html
input/: test_manifest.jsonl
output/: filtered_manifest.jsonl  old_filtered.jsonl
output/accepted_examples/: 2814749767440297_chunk_5.flac  5066549580833376_chunk_3.flac  5705c47c-f70a-4d9f-9ecc-180b97d29ec9_1_chunk_2.flac  5705c47c-f70a-4d9f-9ecc-180b97d29ec9_1_chunk_3.flac  6473924464363868_chunk_4.flac  96d0a2bd-d5b2-4035-9122-f9f69debea89_1_chunk_16.flac  af98acc0-a173-4296-8ebc-a7a1b359a965_0_chunk_28.flac
output/edge_cases_examples/: 3377699720681139_chunk_1.flac  562949953990310_chunk_1.flac  900162f5-1ad2-465f-a650-01e4f24ce602_1_chunk_4.flac  b45ba132-d40f-4910-beb0-18209a87202d_1_chunk_10.flac  f15a2887-da32-42d1-b661-23d7d437c3e3_1_chunk_10.flac
output/rejected_examples/: 2a9df41e-16d5-4c3b-adc1-a509fd085a9d_0_chunk_18.flac  2a9df41e-16d5-4c3b-adc1-a509fd085a9d_0_chunk_19.flac  2a9df41e-16d5-4c3b-adc1-a509fd085a9d_0_chunk_20.flac  506da885-7b48-402f-bfe1-1b297c1d9e13_0_chunk_20.flac  b45ba132-d40f-4910-beb0-18209a87202d_1_chunk_12.flac  b45ba132-d40f-4910-beb0-18209a87202d_1_chunk_6.flac  efaee446-2b9a-429e-a41c-05c1e7ec8f2f_0_chunk_16.flac
scripts/: calculate_rtf.py  calculate_time_per_second.py  generate_test_manifest.py  setup_dataset.py
src/: __init__.py
src/filters/: __init__.py  deduplicator.py  (+1 more)
(+7 files in other folders)
