[project]
name = "audio-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub>=1.8.0",
    "librosa>=0.11.0",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
]
